Refactor : 인터페이스 프로젝션 방식으로 변경